--- a/apis/trips/Jenkinsfile
+++ b/apis/trips/Jenkinsfile
@@ -1,10 +1,6 @@
 pipeline {
     agent any
-  
-    tools {
-      go 'go-1.16.8'
-    }
-  
+
     stages {
         stage('Git checkout') {
             steps{
@@ -16,20 +12,29 @@ pipeline {
         stage('Build') {
             steps{
                 // Do your build task
-                sh 'go run main.go'
+                dir("./apis/trips/") {
+                sh '/usr/local/go/bin/go build -o main .'
+                }
             }
         }
         
         stage('Test') {
             steps{
                 // Run unit tests, integration tests, and/or e2e tests
+                dir("./apis/trips/") {
+                sh '/usr/local/go/bin/go test ./tripsgo -run Unit'
+                sh '/usr/local/go/bin/go test ./tripsgo'
+                }
             }
         }
         
-        stage('Publish') {
+        stage('Get') {
             steps{
                 // Publish your artifacts to somewhere.
                 // However, in our hands-on, you just need to print the artifact list by Linux command 'ls -la'
+                dir("./apis/trips/") {
+                sh '/usr/local/go/bin/go get -d'
+                }
             }
         }
 
